# Game-Of-Life

./: .gitignore  AUTHORS  COPYING  INSTALL  README.md  configure.ac  run
src/: Gameoflife.c  Gameoflife.cpp  Gameoflife.h  Makefile.am  main.c  main.cpp  utils.c  utils.cpp  utils.h
